--- a/index.html
+++ b/index.html
@@ -1,19 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda Commerce</title>
-    <!-- Bootstrap stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Panda Commerce</title>
+  <!-- Bootstrap stylesheet -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- custom css stylesheet -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- -----font awesome link------ -->
+  <script src="https://kit.fontawesome.com/16145e6b63.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-   <h1 class="text-primary"> Hello panda</h1>
+  <!-- --------Header Start---------------- -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="panda_logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#shoes">Shoes</a>
+            </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="#backpack" tabindex="-1" aria-disabled="true">Backpack</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#subscribe" tabindex="-1" aria-disabled="true">Subscribe</a>
+            </li>
+          </ul>
 
+        </div>
+      </div>
+    </nav>
 
-    <!-- js script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!------------- image slider----------- -->
+
+    <section class="container">
+      <div id="carouselExampleControls" class="carousel slide bg-gradient p-5 rounded mt-5 slider-bg"
+        data-bs-ride="carousel">
+        <div class="carousel-inner ">
+
+          <div class="carousel-item active">
+            <div class="row d-flex align-items-center">
+              <div class="col-lg-7">
+                <h1>Mi LED TV 4A PRO 32</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                  duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <h1 class="text-danger">$1289</h1>
+
+                <button class="btn bg-danger text-white rounded">BUY NOW <i class="fas fa-arrow-right"></i></button>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center">
+              <div class="col-lg-7">
+                <h1>Cool Dude Headphone</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur illum omnis eius maiores
+                  quaerat nobis autem aliquam tenetur dignissimos itaque.</p>
+                <h1 class="text-danger">$420</h1>
+                <button class="btn bg-danger text-white">BUY NOW <i class="fas fa-arrow-right"></i></button>
+
+              </div>
+              <div class="col-lg-5">
+                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center">
+              <div class="col-lg-7">
+                <h1>X-Box for your living rooms</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime corrupti expedita exercitationem
+                  saepe laudantium! Neque quos aspernatur odio quia exercitationem?</p>
+                <h1 class="text-danger">$600</h1>
+                <button class="btn bg-danger text-white">BUY NOW <i class="fas fa-arrow-right"></i></button>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+  </header>
+
+  <!-- -----------Main Start----------- -->
+  <main>
+    <!-- -----------Categories-------- -->
+    <section class="container my-5">
+      <div class="row g-5">
+        <div class="col-12 col-lg-4 col-md-6">
+          <div class="p-3 border bg-warning text-white rounded-3 d-flex align-items-center justify-content-between">
+            <h1>Watch</h1>
+            <img src="images/categories/watch.png" width="100" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-lg-4 col-md-6">
+          <div class="p-3 border bg-success text-white rounded-3 d-flex align-items-center justify-content-between">
+            <h1>Bag</h1>
+            <img src="images/categories/bag.png" width="100" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-lg-4 col-md-6">
+          <div class="p-3 border bg-primary text-white rounded-3 d-flex align-items-center justify-content-between">
+            <h1>shoes</h1>
+            <img src="images/categories/shoes.png" width="100" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -------------Shoes sectiion-------- -->
+    <section id="shoes" class="container my-5">
+      <h2>Shoes</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Apex</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <h5>$400</h5>
+            </div>
+            <div class="m-3">
+              <button class="panda-btn-buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bata</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5>$370</h5>
+            </div>
+            <div class="m-3">
+              <button class="panda-btn-buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Lotto</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This card has even longer content than the first to show that equal height action.</p>
+              <h5>$340</h5>
+            </div>
+            <div class="m-3">
+              <button class="panda-btn-buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -------------Backpack section----------------- -->
+    <section id="backpack" class="container my-5">
+      <h2>Backpack</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border-0 shadow-lg rounded-3 h-100">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Adidas</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <h5>$320</h5>
+            </div>
+            <div class="m-3">
+              <button class="panda-btn-buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg rounded-3 h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Redux</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5>$410</h5>
+            </div>
+            <div class="m-3">
+              <button class="panda-btn-buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg rounded-3 h-100">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Lotto</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This card has even longer content than the first to show that equal height action.</p>
+              <h5>$320</h5>
+            </div>
+            <div class="m-3">
+              <button class="panda-btn-buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ------Subscribe section----- -->
+    <section id="subscribe" style="height:300px;"
+      class="container d-flex justify-content-center align-items-center bg-primary rounded-3">
+      <div>
+        <h1>Lets stay in touch</h1>
+        <p>Get updates in sales,speacial and more..</p>
+        <input class="form-control" type="text" placeholder="Enter Your Email..">
+        <br>
+        <button class="btn btn-danger">SUBMIT</button>
+      </div>
+    </section>
+  </main>
+
+  <!-- ----------footer start--------- -->
+  <footer class="text-center mt-5">
+    <p><small>&copy All right reserved by panda commerce Ltd. _2021</small></p>
+  </footer>
+
+  <!-- Bootstrap script -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
